--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.takafol</string>
+	<string>com.takafol.io</string>
 	<key>PROJECT_ID</key>
 	<string>takafl21</string>
 	<key>STORAGE_BUCKET</key>
